--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@ $(document).ready(function(e) {
 	},
 	axisY: {
 		title: "Number of Dust ug/m3",
+		suffix: " ug/m3"
 	},
 	toolTip:{
 		shared:true,
