--- a/index.html
+++ b/index.html
@@ -467,8 +467,8 @@ td{
 #panel, #flip {
   padding: 5px;
   text-align: center;
-  background-color: #ffffff;
-  border: solid 1px #c3c3c3;
+  background-color: #FFFACD;
+  border: solid 1px #FFFACD;
 }
 
 #panel {
@@ -583,6 +583,7 @@ td{
 						<td width="55%">ทุกคนควรหลีกเลี่ยงกิจกรรมกลางแจ้งทุก หลีกเลี่ยงพื้นที่ที่มีมลพิษทางอากาศสูง หรือใช้อุปกรณ์ป้องกันตนเองหากมีความจำเป็น หากมีอาการทางสุขภาพควรปรึกษาแพทย์</td>
 					</tr>
 				  </table></center>
+				  <br>
 				</div>
 				<div id="chartContainer2" style="height: 300px; width: 100%;"></div>
 		<br>
