--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@ td{
       <li role="presentation" class="active"><a href="#overview" aria-controls="home" role="tab" data-toggle="tab">Overview</a></li>
       <li role="presentation"><a href="#history" aria-controls="profile" role="tab" data-toggle="tab">History</a></li>
     </ul>
-	
+	<center>  <div><FONT SIZE=4 >Location Puthabucha 44/1</FONT></div></center>
 	<center>  <div><FONT SIZE=4 >Last up date</FONT></div></center>
 	<center>
 			<FONT SIZE=4 ><div class="content" id="update_time">Loading...</div> </FONT>
@@ -585,9 +585,9 @@ td{
 				  </table></center>
 				  <br>
 				</div>
-				<div id="chartContainer2" style="height: 300px; width: 100%;"></div>
+				<div id="chartContainer2" style="height: 300px; width: 70%;"></div>
 		<br>
-				<div id="chartContainer" style="height: 300px; width: 100%;"></div>
+				<div id="chartContainer" style="height: 300px; width: 70%;"></div>
       </div>
     <div role="tabpanel" class="tab-pane" id="history">
 		
