--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@ td{
   padding: 5px;
   text-align: center;
   background-color: #FFFACD;
-  border: solid 1px #FFFACD;
+  border: solid 1px #BEBEBE;
 }
 
 #panel {
