--- a/index.html
+++ b/index.html
@@ -485,10 +485,10 @@ td{
     <hr />
      
     <!-- Nav tabs -->
-    <ul class="nav nav-tabs" role="tablist">
+    <!-- <ul class="nav nav-tabs" role="tablist">
       <li role="presentation" class="active"><a href="#overview" aria-controls="home" role="tab" data-toggle="tab">Overview</a></li>
       <li role="presentation"><a href="#history" aria-controls="profile" role="tab" data-toggle="tab">History</a></li>
-    </ul>
+    </ul> -->
 	<center>  <div><FONT SIZE=4 >Location Puthabucha 44/1</FONT></div></center>
 	<center>  <div><FONT SIZE=4 >Last up date</FONT></div></center>
 	<center>
@@ -587,13 +587,13 @@ td{
 				</div>
 				<br>
 				<br>
-				<div id="chartContainer2" style="height: 300px; width: 70%;"></div>
+				<center><div id="chartContainer2" style="height: 300px; width: 70%;"></div>
 				<br>
-				<div id="chartContainer" style="height: 300px; width: 70%;"></div>
+				<div id="chartContainer" style="height: 300px; width: 70%;"></div></center>
       </div>
-    <div role="tabpanel" class="tab-pane" id="history">
+    <!-- <div role="tabpanel" class="tab-pane" id="history">
 		
-    </div>
+    </div> -->
 	</div>
 		
   </div>
