--- a/index.html
+++ b/index.html
@@ -75,7 +75,13 @@ $(document).ready(function(e) {
 				return content;
 			}
 		},
-		
+		legend:{
+		cursor:"pointer",
+		verticalAlign: "top",
+		horizontalAlign: "center",
+		dockInsidePlotArea: true,
+		itemclick: toogleDataSeries
+	},
 		animationEnabled: true,
 		data: [
 			{
