--- a/index.html
+++ b/index.html
@@ -75,22 +75,16 @@ $(document).ready(function(e) {
 				return content;
 			}
 		},
-		legend:{
-		cursor:"pointer",
-		verticalAlign: "top",
-		horizontalAlign: "center",
-		dockInsidePlotArea: true,
-		itemclick: toogleDataSeries
-	},
+		
 		animationEnabled: true,
 		data: [
 			{
-				showInLegend: true,
+				name:"Temperature",
 				type: "spline", //change it to line, area, column, pie, etc
 				dataPoints: []
 			},
 			{
-				showInLegend: true,
+				name:"Humidity",
 				type: "spline", //change it to line, area, column, pie, etc
 				dataPoints: []
 			}
