--- a/index.html
+++ b/index.html
@@ -488,11 +488,10 @@ td{
     <hr />
      
     <!-- Nav tabs -->
-    <!-- <ul class="nav nav-tabs" role="tablist">
-      <li role="presentation" class="active"><a href="#overview" aria-controls="home" role="tab" data-toggle="tab">Overview</a></li>
-      <li role="presentation"><a href="#history" aria-controls="profile" role="tab" data-toggle="tab">History</a></li>
-    </ul> -->
-	<center>  <div><FONT SIZE=4 >Location Puthabucha 44/1</FONT></div></center>
+    <ul class="nav nav-tabs" role="tablist">
+      <!-- <li role="presentation" class="active"><a href="#overview" aria-controls="home" role="tab" data-toggle="tab">Overview</a></li>
+      <li role="presentation"><a href="#history" aria-controls="profile" role="tab" data-toggle="tab">History</a></li> -->
+    </ul> 
 	<center>  <div><FONT SIZE=4 >Last up date</FONT></div></center>
 	<center>
 			<FONT SIZE=4 ><div class="content" id="update_time">Loading...</div> </FONT>
@@ -542,7 +541,7 @@ td{
 
 
 				<!-- <img src=image/aqi.png width="70%" > -->
-		<div id="flip" weight="50%">เช็คคุณภาพอากาศกับกรมควบคุมมลพิษ</div>
+		<div id="flip" weight="50%">ตารางคุณภาพอากาศกับกรมควบคุมมลพิษ</div>
 		<div id="panel">
 			<center><table style="width:100%;">
 					<tr bgcolor="#FFFFFF">
