--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@ td{
       <!-- <li role="presentation" class="active"><a href="#overview" aria-controls="home" role="tab" data-toggle="tab">Overview</a></li>
       <li role="presentation"><a href="#history" aria-controls="profile" role="tab" data-toggle="tab">History</a></li> -->
     </ul> 
-	<center>  <div><FONT SIZE=4 >Last up date</FONT></div></center>
+	<center>  <div><img src="/image/refresh.png" width="42" height="42"><FONT SIZE=4 >Last up date</FONT></div></center>
 	<center>
 			<FONT SIZE=4 ><div class="content" id="update_time">Loading...</div> </FONT>
 	</center>
