--- a/index.html
+++ b/index.html
@@ -154,15 +154,15 @@ $(document).ready(function(e) {
 	// });
 
 	// chart2.render();
-	function toogleDataSeries(e){
-		if (typeof(e.dataSeries.visible) === "undefined" || e.dataSeries.visible) {
-			e.dataSeries.visible = false;
-		} else{
-			e.dataSeries.visible = true;
-		}
-		chart2.render();
-	}
-	}
+	// function toogleDataSeries(e){
+	// 	if (typeof(e.dataSeries.visible) === "undefined" || e.dataSeries.visible) {
+	// 		e.dataSeries.visible = false;
+	// 	} else{
+	// 		e.dataSeries.visible = true;
+	// 	}
+	// 	chart2.render();
+	// }
+	// }
 	
 	firebase.initializeApp(config);
 		
