--- a/index.html
+++ b/index.html
@@ -591,8 +591,8 @@ td{
 				
       </div>
     <div role="tabpanel" class="tab-pane" id="history">
-		<center><div id="chartContainer2" style="height: 300px; width: 70%;"></div>
-				<br>
+		<!-- <center><div id="chartContainer2" style="height: 300px; width: 70%;"></div>
+				<br> -->
 				<div id="chartContainer" style="height: 300px; width: 70%;"></div></center>
     </div> 
 	</div>
