--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ $(document).ready(function(e) {
 		} 
 		
 		var row = sanp.val();
-		var length = chart2.options.data[0].dataPoints.length;
+		// var length = chart2.options.data[0].dataPoints.length;
 		
 
 
@@ -489,8 +489,8 @@ td{
      
     <!-- Nav tabs -->
     <ul class="nav nav-tabs" role="tablist">
-      <!-- <li role="presentation" class="active"><a href="#overview" aria-controls="home" role="tab" data-toggle="tab">Overview</a></li>
-      <li role="presentation"><a href="#history" aria-controls="profile" role="tab" data-toggle="tab">History</a></li> -->
+      <li role="presentation" class="active"><a href="#overview" aria-controls="home" role="tab" data-toggle="tab">Overview</a></li>
+      <li role="presentation"><a href="#history" aria-controls="profile" role="tab" data-toggle="tab">History</a></li>
     </ul> 
 	<center>  <div><img src="image/refresh.png" width="38" height="38"><FONT SIZE=4 >  Last up date <div class="content" id="update_time">Loading...</div></FONT></div></center>
 	
