--- a/index.html
+++ b/index.html
@@ -585,15 +585,13 @@ td{
 				  </table></center>
 				
 				</div>
+				<!-- <center><div id="chartContainer2" style="height: 300px; width: 70%;"></div>
 				<br>
-				<br>
-				<!-- <center><div id="chartContainer2" style="height: 300px; width: 70%;"></div> -->
-				<br>
-				<div id="chartContainer" style="height: 300px; width: 70%;"></div></center>
+				<center><div id="chartContainer" style="height: 300px; width: 70%;"></div></center> -->
       </div>
-    <!-- <div role="tabpanel" class="tab-pane" id="history">
-		
-    </div> -->
+    <div role="tabpanel" class="tab-pane" id="history">
+		<center><div id="chartContainer" style="height: 300px; width: 70%;"></div></center>
+    </div>
 	</div>
 		
   </div>
