--- a/index.html
+++ b/index.html
@@ -491,8 +491,9 @@ td{
     <ul class="nav nav-tabs" role="tablist">
       <li role="presentation" class="active"><a href="#overview" aria-controls="home" role="tab" data-toggle="tab">Overview</a></li>
       <li role="presentation"><a href="#history" aria-controls="profile" role="tab" data-toggle="tab">History</a></li>
-    </ul> 
-	<center>  <div><img src="image/refresh.png" width="38" height="38"><FONT SIZE=4 >  Last up date <div class="content" id="update_time">Loading...</div></FONT></div></center>
+	</ul> 
+	<img src="image/refresh.png" width="38" height="38">
+	<center>  <div><FONT SIZE=4 >  Last up date <div class="content" id="update_time">Loading...</div></FONT></div></center>
 	
 	<br>
     <!-- Tab panes -->
