--- a/index.html
+++ b/index.html
@@ -492,8 +492,8 @@ td{
       <li role="presentation" class="active"><a href="#overview" aria-controls="home" role="tab" data-toggle="tab">Overview</a></li>
       <li role="presentation"><a href="#history" aria-controls="profile" role="tab" data-toggle="tab">History</a></li>
 	</ul> 
-	<img src="image/refresh.png" width="38" height="38">
-	<center>  <div><FONT SIZE=4 >  Last up date <div class="content" id="update_time">Loading...</div></FONT></div></center>
+	
+	<center>  <div><img src="image/refresh.png" width="38" height="38"> <FONT SIZE=4 >  Last up date <div id="update_time">Loading...</div></FONT></div></center>
 	
 	<br>
     <!-- Tab panes -->
