--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@ td{
       <li role="presentation"><a href="#history" aria-controls="profile" role="tab" data-toggle="tab">History</a></li>
 	</ul> 
 	
-	<center>  <div><img src="image/refresh.png" width="38" height="38"> <FONT SIZE=4 >  Last up date <div id="update_time">Loading...</div></FONT></div></center>
+	<center>  <div><img src="image/refresh.png" width="38" height="38" id="update_time"> <FONT SIZE=4 >  Last up date <br> Loading...</div></FONT></div></center>
 	
 	<br>
     <!-- Tab panes -->
