--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@ $(document).ready(function(e) {
 		$("#pm1 > .content").html(Arow.pm1 + " ug/m3");
 	 	$("#pm25 > .content").html(Arow.pm25 + " ug/m3");
 	 	$("#pm10 > .content").html(Arow.pm10 + " ug/m3");
-		$('#update_time').html(Arow.tims);
+		$('#update_time').html("Last Update <br> "+Arow.tims);
 		$("#temperature").removeClass("loading").addClass("primary");
 		$("#humidity").removeClass("loading").addClass("info");
 		$("#pm1").removeClass("loading").addClass("pm1");
