--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@ td{
       <li role="presentation"><a href="#history" aria-controls="profile" role="tab" data-toggle="tab">History</a></li>
 	</ul> 
 	
-	<center> <FONT SIZE=4 ><div><img src="image/refresh.png" width="38" height="38" id="update_time" class="content">   Last up date <br> Loading...</div></FONT></center>
+	<center> <FONT SIZE=4 ><div><img src="image/refresh.png" width="38" height="38">   Last up date <div id="update_time" class="content"> Loading...</div></FONT> </div></center>
 	
 	<br>
     <!-- Tab panes -->
