--- a/index.html
+++ b/index.html
@@ -479,6 +479,7 @@ td{
   display: none;
 }
 
+
 </style>
 </head>
 
@@ -493,7 +494,7 @@ td{
       <li role="presentation"><a href="#history" aria-controls="profile" role="tab" data-toggle="tab">History</a></li>
 	</ul> 
 	
-	<center> <FONT SIZE=4 ><img src="image/refresh.png" width="38" height="38"><div id="update_time" class="content"> Loading...</FONT> </div></center>
+	<center> <FONT SIZE=4 ><div style="float:left"><img src="image/refresh.png" width="38" height="38"><div style="float:right" id="update_time" class="content"> Loading...</FONT> </div></div></center>
 	
 	<br>
     <!-- Tab panes -->
