--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@ td{
       <li role="presentation"><a href="#history" aria-controls="profile" role="tab" data-toggle="tab">History</a></li>
 	</ul> 
 	
-	<center> <FONT SIZE=4 ><div style="float:left"><img src="image/refresh.png" width="38" height="38">Last Update <div style="float:right" id="update_time" class="content"> Loading...</FONT> </div></div></center>
+	<center> <FONT SIZE=4 ><div><img src="image/refresh.png" width="38" height="38">Last Update <div id="update_time" class="content"> Loading...</FONT> </div></div></center>
 	
 	<br>
     <!-- Tab panes -->
