--- a/index.html
+++ b/index.html
@@ -479,6 +479,10 @@ td{
   display: none;
 }
 
+img{
+	float: left;
+}
+
 </style>
 </head>
 
@@ -492,7 +496,7 @@ td{
       <li role="presentation" class="active"><a href="#overview" aria-controls="home" role="tab" data-toggle="tab">Overview</a></li>
       <li role="presentation"><a href="#history" aria-controls="profile" role="tab" data-toggle="tab">History</a></li>
     </ul> 
-	<center>  <div><img src="image/refresh.png" width="38" height="38"><FONT SIZE=4 >Last up date <div class="content" id="update_time">Loading...</div></FONT></div></center>
+	<center> <p><img src="image/refresh.png" style="width:38px;height:38px;margin-right:15px;"><FONT SIZE=4 >Last up date <p class="content" id="update_time">Loading...</p></FONT></center></p>
 	
 	<br>
     <!-- Tab panes -->
