--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@ img{
       <li role="presentation" class="active"><a href="#overview" aria-controls="home" role="tab" data-toggle="tab">Overview</a></li>
       <li role="presentation"><a href="#history" aria-controls="profile" role="tab" data-toggle="tab">History</a></li>
     </ul> 
-	<center> <p><img src="image/refresh.png" style="width:38px;height:38px;"><FONT SIZE=4 >Last up date <p class="content" id="update_time">Loading...</p></FONT></center></p>
+	<center> <FONT SIZE=4 > <span><div><img src="image/refresh.png" style="width:38px;height:38px;"> Last up date <div>class="content" id="update_time">Loading...</div></FONT></div><</center>/span>
 	
 	<br>
     <!-- Tab panes -->
