--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@ img{
       <li role="presentation" class="active"><a href="#overview" aria-controls="home" role="tab" data-toggle="tab">Overview</a></li>
       <li role="presentation"><a href="#history" aria-controls="profile" role="tab" data-toggle="tab">History</a></li>
     </ul> 
-	<center> <FONT SIZE=4 > <span><div><img src="image/refresh.png" style="width:38px;height:38px;"> Last up date <div class="content" id="update_time">Loading...</div></div></span></FONT></center>
+	<center> <FONT SIZE=4 > <div><span><img src="image/refresh.png" style="width:38px;height:38px;"> Last up date <div class="content" id="update_time">Loading...</div></span></div></FONT></center>
 	
 	<br>
     <!-- Tab panes -->
