--- a/index.html
+++ b/index.html
@@ -479,9 +479,7 @@ td{
   display: none;
 }
 
-img{
-	float: none;
-}
+
 
 </style>
 </head>
@@ -496,7 +494,7 @@ img{
       <li role="presentation" class="active"><a href="#overview" aria-controls="home" role="tab" data-toggle="tab">Overview</a></li>
       <li role="presentation"><a href="#history" aria-controls="profile" role="tab" data-toggle="tab">History</a></li>
     </ul> 
-	<center> <FONT SIZE=4 > <div class="inline"><img src="image/refresh.png" style="width:38px;height:38px;"> Last up date <div class="inline" id="update_time">Loading...</div></div></FONT></center>
+	<center> <FONT SIZE=4 > <div style="display: inline"><img src="image/refresh.png" style="width:38px;height:38px;"> Last up date <div style="display: inline" id="update_time">Loading...</div></div></FONT></center>
 	
 	<br>
     <!-- Tab panes -->
