--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ $(document).ready(function(e) {
 
 	window.onload = function () {
 
-		var chart = new CanvasJS.Chart("chartContainer", {            
+		var chart = new CanvasJS.Chart("chartContainer2", {            
 			title:{
 				text: "Weekly Weather Forecast"              
 			},
@@ -688,7 +688,7 @@ img{
     <div role="tabpanel" class="tab-pane" id="history">
 		<center><div id="chartContainer" style="height: 300px; width: 70%;"></div></center>
 		<br>
-		<div id="chartContainer" style="height: 300px; width: 100%; position: relative;"></div>
+		<div id="chartContainer2" style="height: 300px; width: 100%; position: relative;"></div>
 
     </div>
 	</div>
