--- a/index.html
+++ b/index.html
@@ -595,7 +595,11 @@ img{
 				<center><div id="chartContainer" style="height: 300px; width: 70%;"></div></center> -->
       </div>
     <div role="tabpanel" class="tab-pane" id="history">
-		<center><div id="chartContainer" style="height: 300px; width: 70%;"></div></center>
+		<div class="row">
+			<div class="col-sm-4">
+			<center><div id="chartContainer" style="height: 300px; width: 70%;"></div></center>
+			</div>
+		</div>
     </div>
 	</div>
 		
