--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@ td{
 }
 
 #panel {
-  padding: 50px;
+  padding: 100%;
   display: none;
 }
 
@@ -544,7 +544,8 @@ img{
 
 
 				<!-- <img src=image/aqi.png width="70%" > -->
-		<div id="flip" weight="30%">ตารางคุณภาพอากาศกับกรมควบคุมมลพิษ</div>
+			
+		<div id="flip" weight="30%"><img src="image/refresh.png" style="width:30px;height:30px;">ตารางคุณภาพอากาศกับกรมควบคุมมลพิษ</div>
 		<div id="panel">
 			<center><table style="width:100%;">
 					<tr bgcolor="#FFFFFF">
