--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@ img{
 
 				<!-- <img src=image/aqi.png width="70%" > -->
 			
-		<div id="flip" weight="30%"><img src="image/info.png" style="width:20px;height:20px;">  ตารางคุณภาพอากาศกับกรมควบคุมมลพิษ</div>
+		<div id="flip" weight="30%"><img src="image/info.png" style="width:20px;height:20px;">  <u>ตารางคุณภาพอากาศกับกรมควบคุมมลพิษ</u></div>
 		<div id="panel">
 			<center><table style="width:100%;">
 					<tr bgcolor="#FFFFFF">
