--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@ img{
       <li role="presentation" class="active"><a href="#overview" aria-controls="home" role="tab" data-toggle="tab">Overview</a></li>
       <li role="presentation"><a href="#history" aria-controls="profile" role="tab" data-toggle="tab">History</a></li>
     </ul> 
-	<center> <FONT SIZE=2 > <div style="display: inline"><img src="image/refresh.png" style="width:30px;height:30px;"> Last update <div style="display: inline" id="update_time">Loading...</div></div></FONT></center>
+	<center> <FONT SIZE=3 > <div style="display: inline"><img src="image/refresh.png" style="width:30px;height:30px;"> Last update <div style="display: inline" id="update_time">Loading...</div></div></FONT></center>
 	
 	<br>
     <!-- Tab panes -->
@@ -555,9 +555,9 @@ img{
 					  <th width="55%">Warning Text</th>
 					</tr>
 					<tr bgcolor="#08b3e7">
-					  <td width="15%">0 - 25</td>
-					  <td width="15%">0 - 50</td>
-					  <td width="15%">0 - 50</td>
+					  <td width="15%"><center>0 - 25</center></td>
+					  <td width="15%"><center>0 - 50</center></td>
+					  <td width="15%"><center>0 - 50</center></td>
 					  <td width="55%">คุณภาพอากาศดีมาก เหมาะสำหรับกิจกรรมกลางแจ้งและการท่องเที่ยว</td>
 					  
 					</tr>
