--- a/index.html
+++ b/index.html
@@ -489,8 +489,8 @@ img{
 
 <body>
   <div class="container">
-    <h1>Temperature &amp; Dust Detector Dashboard | Yodsarun</small></h1>
-    <hr />
+    <p><FONT SIZE = 8>Temperature &amp; Dust Detector Dashboard | Yodsarun</small></FONT></p>
+    <!-- <hr /> -->
      
     <!-- Nav tabs -->
     <ul class="nav nav-tabs" role="tablist">
