--- a/index.html
+++ b/index.html
@@ -489,7 +489,8 @@ img{
 
 <body>
   <div class="container">
-    <p><FONT SIZE = 5>Temperature &amp; Dust Detector Dashboard | Yodsarun</small></FONT></p>
+	  <br>
+    <p><FONT SIZE = 5><b>Temperature &amp; <small>Dust Detector Dashboard | Yodsarun</small></b></FONT></p>
     <!-- <hr /> -->
      
     <!-- Nav tabs -->
