--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <!-- canvasjs -->
 <script src="js/jquery.canvasjs.min.js"></script>
-<script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
+
 
 
 <!-- Material Design fonts -->
@@ -176,16 +176,16 @@ $(document).ready(function(e) {
 		} 
 		
 		var row = sanp.val();
-		// var length = chart2.options.data[0].dataPoints.length;
+		//var length = chart2.options.data[0].dataPoints.length;
 		
 
 
 		row.time = new Date(row.time);
 
-		// chart2.options.data[0].dataPoints.push({x: row.time, y: row.pm1});
-		// chart2.options.data[1].dataPoints.push({x: row.time, y: row.pm25});
-		// chart2.options.data[2].dataPoints.push({x: row.time, y: row.pm10});
-		// chart2.render();
+		chart2.options.data[0].dataPoints.push({x: row.time, y: row.pm1});
+		chart2.options.data[1].dataPoints.push({x: row.time, y: row.pm25});
+		chart2.options.data[2].dataPoints.push({x: row.time, y: row.pm10});
+		chart2.render();
 
 		chart.options.data[0].dataPoints.push({x: row.time, y: row.temperature});
 		chart.options.data[1].dataPoints.push({x: row.time, y: row.humidity});
@@ -270,13 +270,14 @@ $(document).ready(function(e) {
 			lastRows = row;
 		});
 		chart.render();
-		// var length = chart2.options.data[0].dataPoints.length;
-		// $.each(dataRows, function(index, row) {
-		// 	chart2.options.data[0].dataPoints.push({x: row.time, y: row.pm1});
-		// 	chart2.options.data[1].dataPoints.push({x: row.time, y: row.pm25});
-		// 	chart2.options.data[2].dataPoints.push({x: row.time, y: row.pm10});
-		// });
-		// chart2.render();
+		var length = sanp.val();//chart2.options.data[0].dataPoints.length;
+		
+		$.each(length, function(index, row) {
+		 	chart2.options.data[0].dataPoints.push({x: row.time, y: row.pm1});
+		 	chart2.options.data[1].dataPoints.push({x: row.time, y: row.pm25});
+		 	chart2.options.data[2].dataPoints.push({x: row.time, y: row.pm10});
+		 });
+		 chart2.render();
 		
 		var Arow = lastRows;
 		$("#temperature > .content").html(Arow.temperature + " &deg;C");
@@ -599,14 +600,18 @@ img{
     <div role="tabpanel" class="tab-pane" id="history">
 		<div class="row">
 			<center><div id="chartContainer" style="height: 300px; width: 70%;"></div></center>
+			
 		</div>
+		<!-- <div class="row">
+			<center><div id="chartContainer2" style="height: 300px; width: 70%;"></div></center>
+		</div>  -->
     </div>
 	</div>
 		
   </div>
 
 
-	
+  <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
 </body>
 
 
