--- a/index.html
+++ b/index.html
@@ -176,15 +176,15 @@ $(document).ready(function(e) {
 		} 
 		
 		var row = sanp.val();
-		var length = chart2.options.data[0].dataPoints.length;
+		var length = sanp.val();//chart2.options.data[0].dataPoints.length;
 		
 
 
 		row.time = new Date(row.time);
 
-		chart2.options.data[0].dataPoints.push({x: row.time, y: row.pm1});
-		chart2.options.data[1].dataPoints.push({x: row.time, y: row.pm25});
-		chart2.options.data[2].dataPoints.push({x: row.time, y: row.pm10});
+		chart2.options.data[0].dataPoints.push({x: row.time, y: length.pm1});
+		chart2.options.data[1].dataPoints.push({x: row.time, y: length.pm25});
+		chart2.options.data[2].dataPoints.push({x: row.time, y: length.pm10});
 		chart2.render();
 
 		chart.options.data[0].dataPoints.push({x: row.time, y: row.temperature});
@@ -270,15 +270,15 @@ $(document).ready(function(e) {
 			lastRows = row;
 		});
 		chart.render();
+
+		var length = sanp.val();//chart2.options.data[0].dataPoints.length;
 		
-		var length = chart2.options.data[0].dataPoints.length;
-		
-		$.each(length, function(index, row) {
-		 	chart2.options.data[0].dataPoints.push({x: row.time, y: row.pm1});
-		 	chart2.options.data[1].dataPoints.push({x: row.time, y: row.pm25});
-		 	chart2.options.data[2].dataPoints.push({x: row.time, y: row.pm10});
+		$.each(dataRows, function(index, length) {
+		 	chart2.options.data[0].dataPoints.push({x: row.time, y: length.pm1});
+		 	chart2.options.data[1].dataPoints.push({x: row.time, y: length.pm25});
+		 	chart2.options.data[2].dataPoints.push({x: row.time, y: length.pm10});
 		 });
-		 chart2.render();
+		chart2.render();
 		
 		var Arow = lastRows;
 		$("#temperature > .content").html(Arow.temperature + " &deg;C");
