--- a/index.html
+++ b/index.html
@@ -176,20 +176,20 @@ $(document).ready(function(e) {
 		} 
 		
 		var row = sanp.val();
-		// var length = chart2.options.data[0].dataPoints.length;
+		var length = chart2.options.data[0].dataPoints.length;
 		
 
 
 		row.time = new Date(row.time);
 
-		// chart2.options.data[0].dataPoints.push({x: row.time, y: row.pm1});
-		// chart2.options.data[1].dataPoints.push({x: row.time, y: row.pm25});
-		// chart2.options.data[2].dataPoints.push({x: row.time, y: row.pm10});
-		// chart2.render();
-
 		chart.options.data[0].dataPoints.push({x: row.time, y: row.temperature});
 		chart.options.data[1].dataPoints.push({x: row.time, y: row.humidity});
 		chart.render();
+
+		chart2.options.data[0].dataPoints.push({x: row.time, y: row.pm1});
+		chart2.options.data[1].dataPoints.push({x: row.time, y: row.pm25});
+		chart2.options.data[2].dataPoints.push({x: row.time, y: row.pm10});
+		chart2.render();
 
 		$("#temperature > .content").html(row.temperature + " &deg;C");
 		$("#humidity > .content").text(row.humidity + " %");
@@ -270,13 +270,13 @@ $(document).ready(function(e) {
 			lastRows = row;
 		});
 		chart.render();
-		// var length = chart2.options.data[0].dataPoints.length;
-		// $.each(dataRows, function(index, row) {
-		// 	chart2.options.data[0].dataPoints.push({x: row.time, y: row.pm1});
-		// 	chart2.options.data[1].dataPoints.push({x: row.time, y: row.pm25});
-		// 	chart2.options.data[2].dataPoints.push({x: row.time, y: row.pm10});
-		// });
-		// chart2.render();
+		var length = chart2.options.data[0].dataPoints.length;
+		$.each(dataRows, function(index, row) {
+			chart2.options.data[0].dataPoints.push({x: row.time, y: row.pm1});
+			chart2.options.data[1].dataPoints.push({x: row.time, y: row.pm25});
+			chart2.options.data[2].dataPoints.push({x: row.time, y: row.pm10});
+		});
+		chart2.render();
 		
 		var Arow = lastRows;
 		$("#temperature > .content").html(Arow.temperature + " &deg;C");
