--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
 <!-- canvasjs -->
 <script src="js/jquery.canvasjs.min.js"></script>
+<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+
 
 
 
@@ -30,6 +32,33 @@
 <script src="js/ripples.min.js"></script>
 <!-- Animate.css -->
 <link rel="stylesheet" href="css/animate.min.css">
+
+
+<script type="text/javascript">
+	google.charts.load('current', {'packages':['corechart']});
+	google.charts.setOnLoadCallback(drawChart);
+
+	function drawChart() {
+	  var data = google.visualization.arrayToDataTable([
+		['Year', 'Sales', 'Expenses'],
+		['2004',  1000,      400],
+		['2005',  1170,      460],
+		['2006',  660,       1120],
+		['2007',  1030,      540]
+	  ]);
+
+	  var options = {
+		title: 'Company Performance',
+		curveType: 'function',
+		legend: { position: 'bottom' }
+	  };
+
+	  var chart = new google.visualization.LineChart(document.getElementById('curve_chart'));
+
+	  chart.draw(data, options);
+	}
+  </script>
+
 
 <script>
 	
@@ -604,6 +633,10 @@ img{
 		<div class="row">
 			<center><div id="chartContainer2" style="height: 300px; width: 70%;"></div></center>
 		</div> 
+		<br>
+		<div class="row">
+			<center><div id="curve_chart" style="width: 70%; height: 300px"></div></center>
+		</div>
     </div>
 	</div>
 		
