--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ $(document).ready(function(e) {
 
 	chart = new CanvasJS.Chart("chartContainer", {
 		title: {
-			text: "Temperature & Humidityhhh"
+			text: "Temperature & Humidity"
 		},
 		axisX:{  
 			valueFormatString: "HH:mm"
@@ -153,6 +153,43 @@ $(document).ready(function(e) {
 	});
 
 	chart2.render();
+
+//////////////////////////////////////////// <<  chart 3
+	var options = {
+	animationEnabled: true,  
+	title:{
+		text: "Monthly Sales - 2017"
+	},
+	axisX: {
+		valueFormatString: "MMM"
+	},
+	axisY: {
+		title: "Sales (in USD)",
+		prefix: "$",
+		includeZero: false
+	},
+	data: [{
+		yValueFormatString: "$#,###",
+		xValueFormatString: "MMMM",
+		type: "spline",
+		dataPoints: [
+			{ x: new Date(2017, 0), y: 25060 },
+			{ x: new Date(2017, 1), y: 27980 },
+			{ x: new Date(2017, 2), y: 33800 },
+			{ x: new Date(2017, 3), y: 49400 },
+			{ x: new Date(2017, 4), y: 40260 },
+			{ x: new Date(2017, 5), y: 33900 },
+			{ x: new Date(2017, 6), y: 48000 },
+			{ x: new Date(2017, 7), y: 31500 },
+			{ x: new Date(2017, 8), y: 32300 },
+			{ x: new Date(2017, 9), y: 42000 },
+			{ x: new Date(2017, 10), y: 52160 },
+			{ x: new Date(2017, 11), y: 49400 }
+		]
+	}]
+};
+$("#chartContainer3").CanvasJSChart(options);
+
 	function toogleDataSeries(e){
 		if (typeof(e.dataSeries.visible) === "undefined" || e.dataSeries.visible) {
 			e.dataSeries.visible = false;
@@ -161,6 +198,10 @@ $(document).ready(function(e) {
 		}
 		chart2.render();
 	}
+
+
+
+
 	
 	firebase.initializeApp(config);
 		
@@ -362,125 +403,6 @@ $(document).ready(function(e) {
 		$("#panel").slideToggle("slow");
 	});
 	});
-
-	// chart colors
-var colors = ['#007bff','#28a745','#333333','#c3e6cb','#dc3545','#6c757d'];
-
-/* large line chart */
-var chLine = document.getElementById("chLine");
-var chartData = {
-  labels: ["S", "M", "T", "W", "T", "F", "S"],
-  datasets: [{
-    data: [589, 445, 483, 503, 689, 692, 634],
-    backgroundColor: 'transparent',
-    borderColor: colors[0],
-    borderWidth: 4,
-    pointBackgroundColor: colors[0]
-  },
-  {
-    data: [639, 465, 493, 478, 589, 632, 674],
-    backgroundColor: colors[3],
-    borderColor: colors[1],
-    borderWidth: 4,
-    pointBackgroundColor: colors[1]
-  }]
-};
-
-if (chLine) {
-  new Chart(chLine, {
-  type: 'line',
-  data: chartData,
-  options: {
-    scales: {
-      yAxes: [{
-        ticks: {
-          beginAtZero: false
-        }
-      }]
-    },
-    legend: {
-      display: false
-    }
-  }
-  });
-}
-
-var options = {
-	animationEnabled: true,
-	theme: "dark2",
-	title:{
-		text: "Actual vs Projected Sales"
-	},
-	axisX:{
-		valueFormatString: "DD MMM"
-	},
-	axisY: {
-		title: "Number of Sales",
-		suffix: "K",
-		minimum: 30
-	},
-	toolTip:{
-		shared:true
-	},  
-	legend:{
-		cursor:"pointer",
-		verticalAlign: "bottom",
-		horizontalAlign: "left",
-		dockInsidePlotArea: true,
-		itemclick: toogleDataSeries
-	},
-	data: [{
-		type: "line",
-		showInLegend: true,
-		name: "Projected Sales",
-		markerType: "square",
-		xValueFormatString: "DD MMM, YYYY",
-		color: "#F08080",
-		yValueFormatString: "#,##0K",
-		dataPoints: [
-			{ x: new Date(2017, 10, 1), y: 63 },
-			{ x: new Date(2017, 10, 2), y: 69 },
-			{ x: new Date(2017, 10, 3), y: 65 },
-			{ x: new Date(2017, 10, 4), y: 70 },
-			{ x: new Date(2017, 10, 5), y: 71 },
-			{ x: new Date(2017, 10, 6), y: 65 },
-			{ x: new Date(2017, 10, 7), y: 73 },
-			{ x: new Date(2017, 10, 8), y: 96 },
-			{ x: new Date(2017, 10, 9), y: 84 },
-			{ x: new Date(2017, 10, 10), y: 85 },
-			{ x: new Date(2017, 10, 11), y: 86 },
-			{ x: new Date(2017, 10, 12), y: 94 },
-			{ x: new Date(2017, 10, 13), y: 97 },
-			{ x: new Date(2017, 10, 14), y: 86 },
-			{ x: new Date(2017, 10, 15), y: 89 }
-		]
-	},
-	{
-		type: "line",
-		showInLegend: true,
-		name: "Actual Sales",
-		lineDashType: "square",
-		yValueFormatString: "#,##0K",
-		dataPoints: [
-			{ x: new Date(2017, 10, 1), y: 60 },
-			{ x: new Date(2017, 10, 2), y: 57 },
-			{ x: new Date(2017, 10, 3), y: 51 },
-			{ x: new Date(2017, 10, 4), y: 56 },
-			{ x: new Date(2017, 10, 5), y: 54 },
-			{ x: new Date(2017, 10, 6), y: 55 },
-			{ x: new Date(2017, 10, 7), y: 54 },
-			{ x: new Date(2017, 10, 8), y: 69 },
-			{ x: new Date(2017, 10, 9), y: 65 },
-			{ x: new Date(2017, 10, 10), y: 66 },
-			{ x: new Date(2017, 10, 11), y: 63 },
-			{ x: new Date(2017, 10, 12), y: 67 },
-			{ x: new Date(2017, 10, 13), y: 66 },
-			{ x: new Date(2017, 10, 14), y: 56 },
-			{ x: new Date(2017, 10, 15), y: 64 }
-		]
-	}]
-};
-$("#chartContainer3").CanvasJSChart(options);
 
 </script>
 
@@ -733,7 +655,7 @@ img{
 
 
   <script src="https://canvasjs.com/assets/script/jquery-1.11.1.min.js"></script>
-<script src="https://canvasjs.com/assets/script/jquery.canvasjs.min.js"></script>
+  <script src="https://canvasjs.com/assets/script/jquery.canvasjs.min.js"></script>
 </body>
 
 
