--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ $(document).ready(function(e) {
 
 	chart = new CanvasJS.Chart("chartContainer", {
 		title: {
-			text: "Temperature & Humidity"
+			text: "Temperature & Humidityhhh"
 		},
 		axisX:{  
 			valueFormatString: "HH:mm"
@@ -153,43 +153,6 @@ $(document).ready(function(e) {
 	});
 
 	chart2.render();
-
-//////////////////////////////////////////// <<  chart 3
-	var options = {
-	animationEnabled: true,  
-	title:{
-		text: "Monthly Sales - 2017"
-	},
-	axisX: {
-		valueFormatString: "MMM"
-	},
-	axisY: {
-		title: "Sales (in USD)",
-		prefix: "$",
-		includeZero: false
-	},
-	data: [{
-		yValueFormatString: "$#,###",
-		xValueFormatString: "MMMM",
-		type: "spline",
-		dataPoints: [
-			{ x: new Date(2017, 0), y: 25060 },
-			{ x: new Date(2017, 1), y: 27980 },
-			{ x: new Date(2017, 2), y: 33800 },
-			{ x: new Date(2017, 3), y: 49400 },
-			{ x: new Date(2017, 4), y: 40260 },
-			{ x: new Date(2017, 5), y: 33900 },
-			{ x: new Date(2017, 6), y: 48000 },
-			{ x: new Date(2017, 7), y: 31500 },
-			{ x: new Date(2017, 8), y: 32300 },
-			{ x: new Date(2017, 9), y: 42000 },
-			{ x: new Date(2017, 10), y: 52160 },
-			{ x: new Date(2017, 11), y: 49400 }
-		]
-	}]
-};
-$("#chartContainer3").CanvasJSChart(options);
-
 	function toogleDataSeries(e){
 		if (typeof(e.dataSeries.visible) === "undefined" || e.dataSeries.visible) {
 			e.dataSeries.visible = false;
@@ -198,10 +161,6 @@ $("#chartContainer3").CanvasJSChart(options);
 		}
 		chart2.render();
 	}
-
-
-
-
 	
 	firebase.initializeApp(config);
 		
@@ -389,20 +348,21 @@ $("#chartContainer3").CanvasJSChart(options);
 
 });
 
-	var setTimeoffline = function() {   // ถ้าไม่มีการเชื่อมต่อ
-		if (typeof toOffline === "number") clearTimeout(toOffline);
-		
-		toOffline = setTimeout(function() {
-			$("#status").removeClass("danger").removeClass("loading").addClass("success");
-			$("#status > .content").text("Up to date");
-		}, 2 * 60 * 1000);
-	}
+var setTimeoffline = function() {   // ถ้าไม่มีการเชื่อมต่อ
+	if (typeof toOffline === "number") clearTimeout(toOffline);
+	
+	toOffline = setTimeout(function() {
+		$("#status").removeClass("danger").removeClass("loading").addClass("success");
+		$("#status > .content").text("Up to date");
+	}, 2 * 60 * 1000);
+}
 
-	$(document).ready(function(){
-	$("#flip").click(function(){
-		$("#panel").slideToggle("slow");
-	});
-	});
+$(document).ready(function(){
+  $("#flip").click(function(){
+    $("#panel").slideToggle("slow");
+  });
+});
+
 
 </script>
 
@@ -644,18 +604,13 @@ img{
 		<div class="row">
 			<center><div id="chartContainer2" style="height: 300px; width: 70%;"></div></center>
 		</div> 
-		<br>
-		<div class="row">
-				<div id="chartContainer3" style="height: 300px; width: 100%;"></div>
-		</div> 
     </div>
 	</div>
 		
   </div>
 
 
-  <script src="https://canvasjs.com/assets/script/jquery-1.11.1.min.js"></script>
-  <script src="https://canvasjs.com/assets/script/jquery.canvasjs.min.js"></script>
+  <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
 </body>
 
 
