--- a/index.html
+++ b/index.html
@@ -155,94 +155,96 @@ $(document).ready(function(e) {
 	});
 
 	chart2.render();
-	function toogleDataSeries(e){
+
+	
+	var options = {
+	animationEnabled: true,
+	theme: "light2",
+	title:{
+		text: "Actual vs Projected Sales"
+	},
+	axisX:{
+		valueFormatString: "DD MMM"
+	},
+	axisY: {
+		title: "Number of Sales",
+		suffix: "K",
+		minimum: 30
+	},
+	toolTip:{
+		shared:true
+	},  
+	legend:{
+		cursor:"pointer",
+		verticalAlign: "bottom",
+		horizontalAlign: "left",
+		dockInsidePlotArea: true,
+		itemclick: toogleDataSeries
+	},
+	data: [{
+		type: "line",
+		showInLegend: true,
+		name: "Projected Sales",
+		markerType: "square",
+		xValueFormatString: "DD MMM, YYYY",
+		color: "#F08080",
+		yValueFormatString: "#,##0K",
+		dataPoints: [
+			{ x: new Date(2017, 10, 1), y: 63 },
+			{ x: new Date(2017, 10, 2), y: 69 },
+			{ x: new Date(2017, 10, 3), y: 65 },
+			{ x: new Date(2017, 10, 4), y: 70 },
+			{ x: new Date(2017, 10, 5), y: 71 },
+			{ x: new Date(2017, 10, 6), y: 65 },
+			{ x: new Date(2017, 10, 7), y: 73 },
+			{ x: new Date(2017, 10, 8), y: 96 },
+			{ x: new Date(2017, 10, 9), y: 84 },
+			{ x: new Date(2017, 10, 10), y: 85 },
+			{ x: new Date(2017, 10, 11), y: 86 },
+			{ x: new Date(2017, 10, 12), y: 94 },
+			{ x: new Date(2017, 10, 13), y: 97 },
+			{ x: new Date(2017, 10, 14), y: 86 },
+			{ x: new Date(2017, 10, 15), y: 89 }
+		]
+	},
+	{
+		type: "line",
+		showInLegend: true,
+		name: "Actual Sales",
+		lineDashType: "dash",
+		yValueFormatString: "#,##0K",
+		dataPoints: [
+			{ x: new Date(2017, 10, 1), y: 60 },
+			{ x: new Date(2017, 10, 2), y: 57 },
+			{ x: new Date(2017, 10, 3), y: 51 },
+			{ x: new Date(2017, 10, 4), y: 56 },
+			{ x: new Date(2017, 10, 5), y: 54 },
+			{ x: new Date(2017, 10, 6), y: 55 },
+			{ x: new Date(2017, 10, 7), y: 54 },
+			{ x: new Date(2017, 10, 8), y: 69 },
+			{ x: new Date(2017, 10, 9), y: 65 },
+			{ x: new Date(2017, 10, 10), y: 66 },
+			{ x: new Date(2017, 10, 11), y: 63 },
+			{ x: new Date(2017, 10, 12), y: 67 },
+			{ x: new Date(2017, 10, 13), y: 66 },
+			{ x: new Date(2017, 10, 14), y: 56 },
+			{ x: new Date(2017, 10, 15), y: 64 }
+		]
+	}]
+};
+$("#chartContainer3").CanvasJSChart(options);
+
+
+
+function toogleDataSeries(e){
 		if (typeof(e.dataSeries.visible) === "undefined" || e.dataSeries.visible) {
 			e.dataSeries.visible = false;
 		} else{
 			e.dataSeries.visible = true;
 		}
-		chart.render();
-		chart2.render();
-		chart3.render();
+		e.chart3.render();
+		e.chart2.render();
 	}
-	
-
-	chart3 = new CanvasJS.Chart("chartContainer3", {
-	animationEnabled: true,
-	zoomEnabled: true,
-	theme: "dark2",
-	title:{
-		text: "Growth in Internet Users Globally"
-	},
-	axisX:{
-		title: "Year",
-		valueFormatString: "####",
-		interval: 2
-	},
-	axisY:{
-		logarithmic: true, //change it to false
-		title: "Internet Users (Log)",
-		titleFontColor: "#6D78AD",
-		lineColor: "#6D78AD",
-		gridThickness: 0,
-		lineThickness: 1,
-		includeZero: false,
-		labelFormatter: addSymbols
-	},
-	axisY2:{
-		title: "Internet Users",
-		titleFontColor: "#51CDA0",
-		logarithmic: false, //change it to true
-		lineColor: "#51CDA0",
-		gridThickness: 0,
-		lineThickness: 1,
-		labelFormatter: addSymbols
-	},
-	toolTip:{
-		shared:true,
-		contentFormatter: function (e) {
-				var content = CanvasJS.formatDate(e.entries[0].dataPoint.x, "HH:mm:ss") + "<br>";
-				content += "<strong>PM 1</strong>: " + e.entries[0].dataPoint.y + " ug/m3 ";
-				content += "<strong>PM 2.5</strong>: " + e.entries[1].dataPoint.y + " ug/m3 ";
-				content += "<strong>PM 10</strong>: " + e.entries[2].dataPoint.y + " ug/m3 ";
-				return content;
-			}
-	},  
-	legend:{
-		verticalAlign: "top",
-		fontSize: 16,
-		dockInsidePlotArea: true,
-		itemclick: toogleDataSeries
-	},
-	data: [{
-		type: "spline",
-		xValueFormatString: "####",
-		showInLegend: true,
-		name: "Log Scale",
-		dataPoints: []
-	},
-	{
-		type: "spline",
-		xValueFormatString: "####",
-		axisYType: "secondary",
-		showInLegend: true,
-		name: "Linear Scale",
-		dataPoints: []
-	}]
-});
-chart3.render();
-
-function addSymbols(e){
-	var suffixes = ["", "K", "M", "B"];
-
-	var order = Math.max(Math.floor(Math.log(e.value) / Math.log(1000)), 0);
-	if(order > suffixes.length - 1)
-		order = suffixes.length - 1;
-
-	var suffix = suffixes[order];
-	return CanvasJS.formatNumber(e.value / Math.pow(1000, order)) + suffix;
-}
-
 
 
 	firebase.initializeApp(config);
@@ -695,8 +697,8 @@ img{
 	</div>
 		
   </div>
-
-  <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
+  <script src="https://canvasjs.com/assets/script/jquery-1.11.1.min.js"></script>
+  <script src="https://canvasjs.com/assets/script/jquery.canvasjs.min.js"></script>
 </body>
 
 
