--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ function toogleDataSeries(e){
 			e.dataSeries.visible = true;
 		}
 		// chart.render();
-		e.chart2.render();
+		chart2.render();
 	}
 
 
