--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ $(document).ready(function(e) {
 	$("#pm10").addClass("loading");
 
 	chart = new CanvasJS.Chart("chartContainer", {
-		theme: "light2",
+		//theme: "light2",
 		title: {
 			text: "Temperature & Humidityhhh"
 		},
@@ -100,7 +100,7 @@ $(document).ready(function(e) {
 
 	chart2 = new CanvasJS.Chart("chartContainer2", {
 	animationEnabled: true,
-	theme: "light2",
+	theme: "dark2",
 	title:{
 		text: "PM 1 & PM 1 & PM 10"
 	},
