--- a/index.html
+++ b/index.html
@@ -307,8 +307,8 @@ function toogleDataSeries(e){
 		$("#status").removeClass("loading").removeClass("danger").addClass("success");
 		$("#status > .content").text("Up to date"); // ไม่มีอุปกรณ์มาต่อเลย
 		} else {
-			$("#status").removeClass("loading").removeClass("success").addClass("danger");
-			$("#status > .content").text("Refresh Data...");   // ต่อ แต่ไม่มีไอเทม
+			$("#status").removeClass("loading").removeClass("danger").addClass("success");
+			$("#status > .content").text("New Data!!");   // ต่อ แต่ไม่มีไอเทม
 		}
 
 		if(Arow.pm25 >=0 && Arow.pm25 <=25)
