--- a/index.html
+++ b/index.html
@@ -301,8 +301,10 @@ function toogleDataSeries(e){
 	
 		var now = new Date();
 		Arow.time = new Date(Arow.time);
+		$("#status").removeClass("loading").removeClass("success").addClass("danger");
+		$("#status > .content").text("Updating...");
 
-
+		
 		if (Math.round(now) -  Math.round(Arow.time) < (2 * 60 * 1000)) {
 		$("#status").removeClass("loading").removeClass("danger").addClass("success");
 		$("#status > .content").text("Up to date"); // ไม่มีอุปกรณ์มาต่อเลย
